# SINP

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: echo_server.rs  simple_client.rs
sinp-client/: Cargo.toml
sinp-client/src/: connection.rs  lib.rs  state_machine.rs
sinp-core/: Cargo.toml
sinp-core/src/: confidence.rs  error.rs  interpreter.rs  lib.rs  message.rs  security.rs  state.rs
sinp-server/: Cargo.toml
sinp-server/src/: capability.rs  config.rs  handler.rs  main.rs  state_machine.rs
