[workspace]
resolver = "2"
members = [
    "sinp-core",
    "sinp-server",
    "sinp-client",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["SINP Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2"
thiserror = "2"
rand = "0.8"

