[package]
name = "sinp-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SINP protocol client SDK"

[dependencies]
sinp-core = { path = "../sinp-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
thiserror.workspace = true
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
