[package]
name = "sinp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for SINP - Semantic Intent Negotiation Protocol"

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
thiserror.workspace = true
rand.workspace = true
base64 = "0.22"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
