[package]
name = "sinp-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SINP protocol server implementation"

[dependencies]
sinp-core = { path = "../sinp-core" }
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
thiserror.workspace = true
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "sinp-server"
path = "src/main.rs"
